--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -65,50 +65,43 @@
             <h3>tab slider</h3>
             <div class="inner_tab_slider">
                 <div class="tab_contents_block">
+                    
                     <div class="tab_content_block">
-                        <h4>Делегирование событий</h4>
-                        <p>В JavaScript делегирование событий - это когда мы используем один обработчик событий для
-                            группы элементов, вместо того чтобы назначать отдельный обработчик каждому элементу. Когда
-                            происходит событие на одном из элементов, оно перехватывается общим обработчиком, который
-                            определяет, какой элемент вызвал событие, и выполняет соответствующие действия.</p>
+                        <img src="/Img/enemy.png" alt="Делегирование событий">
+                        <h4>Тор</h4>
+                        <p>Маленькая летающая спутница Путешественника, похожая на фею с белыми волосами, короной и плащом. Энергичная, болтливая и жадная до еды, часто называет себя "лучшим гидом Тейвата". Обладает загадочным происхождением, знает много о мире, но скрывает секреты. </p>
                     </div>
                     <div class="tab_content_block">
-                        <h4>classList</h4>
-                        <p>classList в JavaScript - это свойство, которое позволяет нам работать с классами элемента
-                            HTML. С помощью classList мы можем добавлять, удалять или проверять наличие классов у
-                            элемента. Допустим, у нас есть элемент на веб-странице, и мы хотим изменить его классы с
-                            помощью JavaScript. Вместо того, чтобы обращаться напрямую к атрибуту class, мы можем
-                            использовать свойство classList этого элемента. </p>
+                        <img src="/Img/hero (2).png" alt="classList">
+                        <h4>Рей</h4>
+                        <p>Клон, пилот Евы-00 в NERV. Хрупкая девушка с бледной кожей, короткими синими волосами и красными глазами. Тихая, послушная, эмоционально отстранённая, редко выражает чувства. Символизирует одиночество и искусственность человеческой души, постепенно раскрывает скрытые эмоции. </p>
                     </div>
                     <div class="tab_content_block">
-                        <h4>add()</h4>
-                        <p>Метод add позволяет добавить новый класс к списку классов элемента. Например,
-                            element.classList.add('new-class') добавит класс с именем "new-class" к элементу.</p>
+                        <img src="/Img/enmy1.png" alt="Add">
+                        <h4>Паймон</h4>
+                        <p>Бог грома из Асгарда, сын Одина. Высокий, мускулистый блондин с молотом Мьёльниром (позже — Топором Грома). Импульсивный, храбрый воин, любящий битвы и пиршества. Эволюционирует от высокомерного принца к скромному герою, защищающему миры.</p>
                     </div>
                     <div class="tab_content_block">
-                        <h4>remove()</h4>
-                        <p>Метод remove позволяет удалить класс из списка классов элемента. Например,
-                            element.classList.remove('old-class') удалит класс с именем "old-class" из элемента.</p>
+                        <img src="/Img/hero (2).png" alt="remove">
+                        <h4>Рей</h4>
+                        <p>Клон, пилот Евы-00 в NERV. Хрупкая девушка с бледной кожей, короткими синими волосами и красными глазами. Тихая, послушная, эмоционально отстранённая, редко выражает чувства. Символизирует одиночество и искусственность человеческой души, постепенно раскрывает скрытые эмоции.</p>
                     </div>
                     <div class="tab_content_block">
-                        <h4>contains()</h4>
-                        <p>Метод contains позволяет проверить, содержит ли элемент определенный класс. Он возвращает
-                            true, если класс присутствует, и false, если его нет. Например,
-                            element.classList.contains('highlight') вернет true, если у элемента есть класс
-                            "highlight".</p>
+                        <img src="/Img/enmy1.png" alt="constains">
+                        <h4>Паймон</h4>
+                        <p>Маленькая летающая спутница Путешественника, похожая на фею с белыми волосами, короной и плащом. Энергичная, болтливая и жадная до еды, часто называет себя "лучшим гидом Тейвата". Обладает загадочным происхождением, знает много о мире, но скрывает секреты. </p>
                     </div>
                     <div class="tab_content_items">
-                        <div class="tab_content_item tab_content_item_active">Делегирование событий</div>
-                        <div class="tab_content_item">Class List</div>
-                        <div class="tab_content_item">add()</div>
-                        <div class="tab_content_item">remove()</div>
-                        <div class="tab_content_item">contains()</div>
+                        <div class="tab_content_item tab_content_item_active">Тор</div>
+                        <div class="tab_content_item">Рей</div>
+                        <div class="tab_content_item">Паймон</div>
+                        <div class="tab_content_item">Рей</div>
+                        <div class="tab_content_item">Паймон</div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
     <div class="converter">
         <div class="container">
             <h3>CONVERTER</h3>
