Initial commit: full website with portfolio, animations, sounds

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Java Script</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/core.css">
+    <link rel="stylesheet" href="../pages/sendhw.html">
 </head>
 <body>
 
@@ -14,7 +15,8 @@
             <div class="inner_header">
                 <a href="index.html">
                     <div class="logotype">
-                        <h2>JavaScript</h2>
+                        <img src="/Img/Item_Anemoculus.ico" alt="">
+                        <h2>Genshin-impact</h2>
                     </div>
                 </a>
                 <ul class="menu">
@@ -25,7 +27,7 @@
                         <a href="pages/lessons.html">Lessons</a>
                     </li>
                     <li class="menu_link">
-                        <a href="" target="_blank">Send hw</a>
+                        <a href="/pages/sendhw.html" >Send hw</a>
                     </li>
                 </ul>
                 <button class="btn" id="btn-get">Click me!</button>
@@ -35,7 +37,7 @@
     <div class="main_block">
         <div class="container">
             <div class="inner_main">
-                <h1><strong id="js-color">JavaScript</strong> - на самом деле очень легко и просто!</h1>
+                <h1><strong id="js-color">Genshin Impact</strong> An action-adventure computer game with open world and RPG elements, developed by the Chinese company miHoYo Limited. </h1>
                 <div class="colors-buttons">
                     <button class="btn btn-color"></button>
                     <button class="btn btn-color"></button>
@@ -50,32 +52,36 @@
             <div class="inner_slider">
                 <div class="slider">
                     <button class="btn-slide" id="prev">&lt;prev</button>
-                    <div class="slide active_slide">
+                    <div class="slide active_slide"  >
                         <div class="slide_card">
-                            <h3>regular expression</h3>
-                            <p>Простыми словами, регулярное выражение - это набор символов, который задает определенные правила для поиска и сопоставления текста. Вы можете использовать регулярные выражения, чтобы найти определенные строки в тексте, заменить части строки на другие значения или извлечь нужную информацию из текста.</p>
-                            <a href="https://developer.mozilla.org/ru/docs/Web/JavaScript/Guide/Regular_expressions" target="_blank">узнать подробнее</a>
+                            <img src="/Img/per3.png" alt="constains">
+                            <h3>Syao</h3>
+                            <p>He is an adept and the only one of the five strongest defenders of Yax left alive. He currently resides at the Wangshu Inn, continuing to fulfill his contract and isolating himself from communication with mortals.</p>
+                            <a href="https://genshin-impact.fandom.com/ru/wiki/%D0%93%D0%B0%D0%BD%D1%8C_%D0%AE%D0%B9" target="_blank">Learn more</a>
                         </div>
                     </div>
                     <div class="slide">
                         <div class="slide_card">
-                            <h3>recursion</h3>
-                            <p>Простыми словами, рекурсия - это, когда функция делает повторяющиеся вызовы самой себя для решения задачи, пока не достигнет определенного условия выхода из рекурсии.</p>
-                            <a href="https://learn.javascript.ru/recursion" target="_blank">узнать подробнее</a>
+                            <img src="/Img/per4.png" alt="constains">
+                            <h3>Sucrose</h3>
+                            <p>Sucrose specializes in using the Anemone element to control the location of opponents. Her elemental skill is able to gather enemies in one place.</p>
+                            <a href="https://genshin-impact.fandom.com/ru/wiki/%D0%93%D0%B0%D0%BD%D1%8C_%D0%AE%D0%B9" target="_blank">Learn more</a>
                         </div>
                     </div>
                     <div class="slide">
                         <div class="slide_card">
-                            <h3>json</h3>
-                            <p>Простыми словами, JSON - это способ представления данных в виде текста, чтобы они могли быть легко поняты и использованы различными программами. Он использует простые правила для описания объектов и массивов, а также для представления простых типов данных, таких как строки, числа, логические значения и т.д.</p>
-                            <a href="https://developer.mozilla.org/ru/docs/Learn/JavaScript/Objects/JSON" target="_blank">узнать подробнее</a>
+                            <img src="/Img/per5.png" alt="constains">
+                            <h3>Ganyoi</h3>
+                            <p>The elemental skill will allow Gan Yu to retreat quickly, and will also create an Ice Lotus that will attract enemy attacks to itself. Opening up and withering, the Ice Lotus deals Cryo damage across the area.</p>
+                            <a href="https://genshin-impact.fandom.com/ru/wiki/%D0%93%D0%B0%D0%BD%D1%8C_%D0%AE%D0%B9" target="_blank">Learn more</a>
                         </div>
                     </div>
                     <div class="slide">
                         <div class="slide_card">
-                            <h3>event loop</h3>
-                            <p>Простыми словами, event loop похож на дежурного, который непрерывно проверяет, произошло ли какое-либо событие, и реагирует на него, когда оно происходит. Он имеет список задач, которые нужно выполнить, и он перебирает этот список событий одно за другим, обрабатывая каждое событие, когда оно наступает.</p>
-                            <a href="https://highload.today/kak-ustroen-event-loop-v-javascript-parallelnaya-model-i-tsikl-sobytij/" target="_blank">узнать подробнее</a>
+                            <img src="/Img/per1.png" alt="constains">
+                            <h3>Flince</h3>
+                            <p>A targeted Tignari shot with the second level of charge releases a crown arrow, which, when hit, creates a homing inflorescence arrow.</p>
+                            <a href="https://genshin-impact.fandom.com/ru/wiki/%D0%93%D0%B0%D0%BD%D1%8C_%D0%AE%D0%B9" target="_blank">Learn more</a>
                         </div>
                     </div>
                     <button class="btn-slide" id="next">next&gt;</button>
@@ -98,24 +104,51 @@
         </div>
     </div>
 
-    <div class="block_video">
+    <div class="block_video" >
         <div class="container">
-            <h3>Полезный ролик про Event Loop</h3>
-            <div class="inner_block_video">
-                <iframe width="80%" height="450" src="https://www.youtube.com/embed/zDlg64fsQow" title="YouTube video player" frameborder="2" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <h3>Passing the game</h3>
+            <div class="inner_block_video" >
+                <iframe width="80%" height="450" src="/Img/Screen Recording 2025-11-03 200337.mp4" title="YouTube video player" frameborder="2" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen ></iframe>
             </div>
         </div>
     </div>
 
-    <div class="footer">
-        <div class="container">
-            <a href="#" target="_blank">
-                <div class="inner_footer">
-                    <h2>Made by </h2>
-                </div>
-            </a>
-        </div>
+    <footer class="custom-footer">
+  <div class="container">
+    <!-- Mailing List -->
+    <div class="mailing-section">
+      <h3>JOIN OUR MAILING LIST</h3>
+      <p>Stay up to date with the latest news, updates, special offers and more!</p>
+      <form class="subscribe-form">
+        <input type="email" placeholder="Enter Your email Address" required>
+        <button type="submit">Subscribe</button>
+      </form>
     </div>
+
+    <!-- Navigation Links -->
+    <nav class="footer-nav">
+      <a href="#">My Account</a>
+      <a href="#">Documentation</a>
+      <a href="#">FAQs</a>
+      <a href="#">Contact</a>
+      <a href="#">Coupon Code</a>
+      <a href="#">About Us</a>
+      <a href="#">Legal</a>
+    </nav>
+
+    <hr class="divider">
+
+    <!-- Social Icons & Copyright -->
+    <div class="footer-bottom">
+      <div class="social-icons">
+        <a href="#" aria-label="Facebook"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#" aria-label="Twitter"></a>
+        <a href="#" aria-label="Instagram"></a>
+      </div>
+      <p class="copyright">©Made by Luiza</p>
+    </div>
+  </div>
+</footer>
 </div>
 
 <div class="modal">
