--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/core.css">
     <link rel="stylesheet" href="../css/lessons.css">
+     <link rel="stylesheet" href="../pages/sendhw.html">
+     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -15,7 +18,10 @@
             <div class="inner_header">
                 <a href="../index.html">
                     <div class="logotype">
-                        <h2>Java<span>Script</span></h2>
+                       <div class="logotype">
+                        <img src="/Img/Item_Anemoculus.ico" alt="">
+                        <h2>Genshin-impact</h2>
+                    </div>
                     </div>
                 </a>
                 <ul class="menu">
@@ -26,7 +32,7 @@
                         <a href="../pages/lessons.html">Lessons</a>
                     </li>
                     <li class="menu_link">
-                        <a href="" target="_blank">Send hw</a>
+                        <a href="/pages/sendhw.html">Send hw</a>
                     </li>
                 </ul>
                 <button class="btn" id="btn-get">Click me!</button>
@@ -47,7 +53,7 @@
         </div>
     </div>
 
-        <div class="phone_block">
+        <div class="phone_block1">
         <div class="container">
             <h3>Phone checker Russian Numbers</h3>
             <div class="inner_phone_block">
@@ -62,41 +68,41 @@
 
     <div class="tab_slider">
         <div class="container">
-            <h3>tab slider</h3>
+            <h3>Tab slider</h3>
             <div class="inner_tab_slider">
                 <div class="tab_contents_block">
                     
-                    <div class="tab_content_block">
-                        <img src="/Img/enemy.png" alt="Делегирование событий">
-                        <h4>Тор</h4>
-                        <p>Маленькая летающая спутница Путешественника, похожая на фею с белыми волосами, короной и плащом. Энергичная, болтливая и жадная до еды, часто называет себя "лучшим гидом Тейвата". Обладает загадочным происхождением, знает много о мире, но скрывает секреты. </p>
+                    <div class="tab_content_block" >
+                        <img src="/Img/enemy.png" alt="Делегирование событий" >
+                        <h4>Tor</h4>
+                        <p>A small flying Traveler's companion who looks like a fairy with white hair, a crown and a cloak. Energetic, talkative, and hungry for food, she often calls herself the "best guide of Teiwat." Has a mysterious origin, knows a lot about the world, but hides secrets. </p>
                     </div>
                     <div class="tab_content_block">
                         <img src="/Img/hero (2).png" alt="classList">
-                        <h4>Рей</h4>
-                        <p>Клон, пилот Евы-00 в NERV. Хрупкая девушка с бледной кожей, короткими синими волосами и красными глазами. Тихая, послушная, эмоционально отстранённая, редко выражает чувства. Символизирует одиночество и искусственность человеческой души, постепенно раскрывает скрытые эмоции. </p>
+                        <h4>Ray</h4>
+                        <p>Clone, pilot of Eva-00 in NERV. A fragile girl with pale skin, short blue hair and red eyes. Quiet, obedient, emotionally detached, rarely expresses feelings. It symbolizes the loneliness and artificiality of the human soul, gradually revealing hidden emotions. </p>
                     </div>
                     <div class="tab_content_block">
                         <img src="/Img/enmy1.png" alt="Add">
-                        <h4>Паймон</h4>
-                        <p>Бог грома из Асгарда, сын Одина. Высокий, мускулистый блондин с молотом Мьёльниром (позже — Топором Грома). Импульсивный, храбрый воин, любящий битвы и пиршества. Эволюционирует от высокомерного принца к скромному герою, защищающему миры.</p>
+                        <h4>Paimon</h4>
+                        <p>The god of thunder from Asgard, son of Odin. A tall, muscular blond man with the hammer Mjolnir (later the Axe of Thunder). An impulsive, brave warrior who loves battles and feasts. Evolves from an arrogant prince to a humble hero who protects worlds.</p>
                     </div>
                     <div class="tab_content_block">
                         <img src="/Img/hero (2).png" alt="remove">
-                        <h4>Рей</h4>
-                        <p>Клон, пилот Евы-00 в NERV. Хрупкая девушка с бледной кожей, короткими синими волосами и красными глазами. Тихая, послушная, эмоционально отстранённая, редко выражает чувства. Символизирует одиночество и искусственность человеческой души, постепенно раскрывает скрытые эмоции.</p>
+                        <h4>Ray</h4>
+                        <p>Clone, pilot of Eva-00 in NERV. A fragile girl with pale skin, short blue hair and red eyes. Quiet, obedient, emotionally detached, rarely expresses feelings. It symbolizes the loneliness and artificiality of the human soul, gradually revealing hidden emotions.</p>
                     </div>
                     <div class="tab_content_block">
                         <img src="/Img/enmy1.png" alt="constains">
-                        <h4>Паймон</h4>
-                        <p>Маленькая летающая спутница Путешественника, похожая на фею с белыми волосами, короной и плащом. Энергичная, болтливая и жадная до еды, часто называет себя "лучшим гидом Тейвата". Обладает загадочным происхождением, знает много о мире, но скрывает секреты. </p>
+                        <h4>Paimon</h4>
+                        <p>A small flying Traveler's companion who looks like a fairy with white hair, a crown and a cloak. Energetic, talkative, and hungry for food, she often calls herself the "best guide of Teiwat." Has a mysterious origin, knows a lot about the world, but hides secrets. </p>
                     </div>
                     <div class="tab_content_items">
-                        <div class="tab_content_item tab_content_item_active">Тор</div>
-                        <div class="tab_content_item">Рей</div>
-                        <div class="tab_content_item">Паймон</div>
-                        <div class="tab_content_item">Рей</div>
-                        <div class="tab_content_item">Паймон</div>
+                        <div class="tab_content_item tab_content_item_active">Tor</div>
+                        <div class="tab_content_item">Ray</div>
+                        <div class="tab_content_item">Paimon</div>
+                        <div class="tab_content_item">Ray</div>
+                        <div class="tab_content_item">Paimon</div>
                     </div>
                 </div>
             </div>
@@ -127,7 +133,9 @@
             <h3>Card Switcher</h3>
             <div class="inner_card_switcher">
                 <button class="btn" id="btn-prev">prev</button>
-                <div class="card"></div>
+                <div class="card"><p>Hello Paimon</p></div>
+                 <div class="card"><p>Hello Ran</p></div>
+                  <div class="card"><p>Hello Ember</p></div>
                 <button class="btn" id="btn-next">next</button>
             </div>
         </div>
@@ -148,15 +156,42 @@
         </div>
     </div>
 
-    <div class="footer">
-        <div class="container">
-            <a href="" target="_blank">
-                <div class="inner_footer">
-                    <h2>Made by </h2>
-                </div>
-            </a>
-        </div>
+   <footer class="custom-footer">
+  <div class="container">
+    <!-- Mailing List -->
+    <div class="mailing-section">
+      <h3>JOIN OUR MAILING LIST</h3>
+      <p>Stay up to date with the latest news, updates, special offers and more!</p>
+      <form class="subscribe-form">
+        <input type="email" placeholder="Enter Your email Address" required>
+        <button type="submit">Subscribe</button>
+      </form>
     </div>
+
+    <!-- Navigation Links -->
+    <nav class="footer-nav">
+      <a href="#">My Account</a>
+      <a href="#">Documentation</a>
+      <a href="#">FAQs</a>
+      <a href="#">Contact</a>
+      <a href="#">Coupon Code</a>
+      <a href="#">About Us</a>
+      <a href="#">Legal</a>
+    </nav>
+
+    <hr class="divider">
+
+    <!-- Social Icons & Copyright -->
+    <div class="footer-bottom">
+      <div class="social-icons">
+        <a href="#" aria-label="Facebook"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#" aria-label="Twitter"></a>
+        <a href="#" aria-label="Instagram"></a>
+      </div>
+      <p class="copyright">©Made by Luiza</p>
+    </div>
+  </div>
+</footer>
 </div>
 
 <div class="modal">
@@ -175,5 +210,7 @@
 
 </body>
 <script src="../js/lesson.js"></script>
+<script src="../js/main.js"></script>
 <script src="../js/modal.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </html>
