--- a/pages/home_works.html
+++ b/pages/home_works.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/core.css">
     <link rel="stylesheet" href="../css/home_works.css">
+    <link rel="stylesheet" href="../pages/sendhw.html">
 </head>
 <body>
 
@@ -15,7 +16,10 @@
             <div class="inner_header">
                 <a href="../index.html">
                     <div class="logotype">
-                        <h2>Java<span>Script</span></h2>
+                        <div class="logotype">
+                        <img src="/Img/Item_Anemoculus.ico" alt="">
+                        <h2>Genshin-impact</h2>
+                    </div>
                     </div>
                 </a>
                 <ul class="menu">
@@ -26,7 +30,7 @@
                         <a href="../pages/lessons.html">Lessons</a>
                     </li>
                     <li class="menu_link">
-                        <a href="" target="_blank">Send hw</a>
+                        <a href="/pages/sendhw.html">Send hw</a>
                     </li>
                 </ul>
                 <button class="btn" id="btn-get">Click me!</button>
@@ -48,14 +52,14 @@
     </div>
 
 
-    <div class="gmail_block">
+    <div class="gmail_block1">
         <div class="container">
             <h3>Home work 1 (part 1.1)</h3>
             <div class="inner_gmail_block">
                 <div class="form_gmail">
                     <label for="iin_input"></label>
                     <input type="text" id="iin_input" placeholder="ИИН">
-                    <button class="btn" id="iin_button">Проверка ИИН</button>
+                    <button class="btn" id="iin_button">Check ИИН</button>
                     <span class="checker" id="iin_result"></span>
                 </div>
             </div>
@@ -68,8 +72,8 @@
             <h3>Home work 1 (part 2)</h3>
             <div class="inner_move_block">
                 <div class="parent_block">
-                    <div class="child_block"></div>
-                </div>
+              <div class="child_block"><img src="/Img/hero (2).png" alt=""></div>
+            </div>
             </div>
         </div>
     </div>
@@ -92,15 +96,42 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        <div class="container">
-            <a href="" target="_blank">
-                <div class="inner_footer">
-                    <h2>Made by </h2>
-                </div>
-            </a>
-        </div>
+    <footer class="custom-footer">
+  <div class="container">
+    <!-- Mailing List -->
+    <div class="mailing-section">
+      <h3>JOIN OUR MAILING LIST</h3>
+      <p>Stay up to date with the latest news, updates, special offers and more!</p>
+      <form class="subscribe-form">
+        <input type="email" placeholder="Enter Your email Address" required>
+        <button type="submit">Subscribe</button>
+      </form>
     </div>
+
+    <!-- Navigation Links -->
+    <nav class="footer-nav">
+      <a href="#">My Account</a>
+      <a href="#">Documentation</a>
+      <a href="#">FAQs</a>
+      <a href="#">Contact</a>
+      <a href="#">Coupon Code</a>
+      <a href="#">About Us</a>
+      <a href="#">Legal</a>
+    </nav>
+
+    <hr class="divider">
+
+    <!-- Social Icons & Copyright -->
+    <div class="footer-bottom">
+      <div class="social-icons">
+        <a href="#" aria-label="Facebook"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#" aria-label="Twitter"></a>
+        <a href="#" aria-label="Instagram"></a>
+      </div>
+      <p class="copyright">©Made by Luiza</p>
+    </div>
+  </div>
+</footer>
 </div>
 
 <div class="modal">
@@ -119,5 +150,6 @@
 
 </body>
 <script src="../js/home_works.js"></script>
+<script src="../js/main.js"></script>
 <script src="../js/modal.js"></script>
 </html>
